--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="nav_close">Close</string>
     <string name="tendangnhap">Tên đăng nhập</string>
     <string name="matkhau">Mật khẩu</string>
+    <string name="dangnhap">Đăng nhập</string>
 </resources>
