update chức năng giao hàng và giao diện

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
         <item>Danh sách đơn hàng đã nhận</item>
         <item>Danh sách đơn hàng đang giao</item>
         <item>Danh sách đơn hàng chờ đi giao</item>
+        <item>Danh sách đơn hàng chưa lấy</item>
+        <item>Danh sách đơn hàng đã từ chối</item>
     </array>
 </resources>
