--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="tendangnhap">Tên đăng nhập</string>
     <string name="matkhau">Mật khẩu</string>
     <string name="dangnhap">Đăng nhập</string>
+    <string name="thong_bao">Thông báo</string>
 
     <array name="danhsach">
         <item>Danh sách đơn hàng</item>
